	  help with discoverability.  CTRL+S is no longer bound to mute.
	* Added ability to change the color of visited links (using the theme
	  control plugin, or setting the color in ~/.gtkrc-2.0)

	Finch:
	* A new 'Nested Grouping' option in the 'Grouping' plugin. Group
	  hierarchies are defined by the '/' character in the group names

version 2.5.1 (08/30/2008):
	libpurple:
	* In the Join/Part plugin, add the ability to apply the rules to
	  buddies.  By default, joins and parts for buddies are still shown.
	* Support SOCKS proxies specified in GNOME or Windows proxy settings.
	* Fix some possible crashes in MSNP15.
	* Enable a default SSL trust relationship for MSN servers.
	* Avoid disconnecting from XMPP servers on parse errors that are
	  non-fatal.
	* Include some perl files that were mistakenly omitted in 2.5.0.

	Pidgin:
	* Prevent use of custom smilies without "shortcuts."
	* Fix a crash that could appear with AIM buddy tooltips.

	Artwork:
	* General refresh of many icons in the interface.
	* Many cleanups to artwork source are now included in the distribution.
	* A new "throbber" animation has been added to indicate when accounts
	  are connecting.

version 2.5.0 (08/18/2008):
	libpurple:
	* Ability to create custom smileys (currently only the MSN protocol
	  utilizes the feature). (Thanks to Mauro Sérgio Ferreira Brasil,
	  Marcus Lundblad, Jorge Villaseñor and other contributors)
	* Add a configure option, --with-system-ssl-certs to allow packagers
	  to specify a system-wide SSL CA certificates directory.  When set,
	  we don't install our SSL CA certs, so it's important that the
	  libpurple package depend on the CA certificates.
	* Add SSL Certificates support to the NSS SSL plugin. (Thanks to Lou
	  Cipher)

	XMPP:
	* Fix a bug that caused the UI to not refresh and caused the client
	  to use 99% CPU when an XMPP account lost its connection to the
	  server.
	* Possibly fix a bug where some clients could get into a state